--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "This project is devloped for create mogo curd",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start":"node index.js"
   },
   "author": "Pramod",
   "license": "ISC",
