--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start":"node index.js"
+    "start": "node index.js"
   },
   "author": "Pramod",
   "license": "ISC",
@@ -17,6 +17,7 @@
     "http": "^0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.3.0",
-    "mongoose": "^5.13.3"
+    "mongoose": "^5.13.3",
+    "validator": "^13.6.0"
   }
 }
